maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(keepOnSideWall()) {
                     ^WallFollowerMaze:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^WallFollowerMaze:22: warning: enclosing method keepOnSideWall has result type Unit: return value discarded
    return true
    ^WallFollowerMaze:25: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^WallFollowerMaze:25: warning: enclosing method keepOnSideWall has result type Unit: return value discarded
  return false
  ^