maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()) {
    if(keepOnSideWall()) {
      if(!estFaceMur()) {
        avance()
				
      }
      else gauche
    }
    else {
      gauche()
      avance()
    }
  }
}


def keepOnSideWall() {
  gauche()
  if(estFaceMur()) {
    droite()
    return true
  }
  droite()
  return false
}